--- a/nodes.html
+++ b/nodes.html
@@ -33,7 +33,7 @@
 <body class="node-tool">
     <div class="wrapper">
       <header>
-		<img src="img/screen.jpg" class="hdn-tmb"/>
+		<img src="img/screen-ion-segments.jpg" class="hdn-tmb"/>
         <h1>Kerbal Space Program - Ion Node Calculator</h1>
         <p>A KSP Maneuver Tool to be used with a mod like <a href="http://forum.kerbalspaceprogram.com/index.php?/topic/44129-105-precise-node-121-precisely-edit-your-maneuver-nodes/" target="_blank">Precise Node</a></p>
 
