--- a/0.0.0v.html
+++ b/0.0.0v.html
@@ -57,7 +57,7 @@
 
       </header>
       <section>
-       <p class="warning-p"><strong class="warn">Warning:</strong> This uses JavaScript to Read your save game file.  It **might** crash your browser.</p>
+       <p class="warning-p"><strong class="warn">Warning:</strong> This uses JavaScript to read your save game file.  It **might** crash your browser.</p>
       </section>
 <section class="wrap">
 	<div id="holder"><p>Drag your KSP Save Game Here</p></div> 
